--- a/admin.html
+++ b/admin.html
@@ -48,7 +48,7 @@ let currentUser = null;
 
 /* Admin users list - UID of admins/mods */
 const adminUIDs = [
-  "ADMIN_UID_1",
+  "4tUXqDRei1RUoPlNSwPOkI5ULtg1",
   "ADMIN_UID_2"
 ];
 
