--- a/admin.html
+++ b/admin.html
@@ -6,26 +6,37 @@
 <title>Pulsenet - Admin Panel</title>
 <style>
 body { font-family:sans-serif; background:#FDFDFF; color:#111; margin:0; padding:20px; }
+header { display:flex; justify-content:space-between; align-items:center; margin-bottom:20px; flex-wrap:wrap; }
 h1 { margin-bottom:20px; }
-.post { border:1px solid #ddd; padding:15px; border-radius:15px; margin-bottom:15px; position:relative; }
-.button { background:#111; color:#fff; padding:6px 12px; border:none; border-radius:6px; cursor:pointer; margin-right:5px; }
-.button-small { padding:4px 8px; font-size:0.9em; }
-.hidden { display:none; }
+.btn-dark { background:#111; color:#fff; padding:8px 12px; border-radius:5px; border:1px solid #ccc; cursor:pointer; font-family:inherit; text-decoration: none; display:inline-block; }
+button { cursor:pointer; margin:5px; padding:8px 12px; border-radius:8px; border:none; font-family:inherit; display:none; }
+.post { border:1px solid #ddd; padding:20px; border-radius:15px; margin-bottom:20px; position:relative; }
 .meta { font-size:13px; color:#666; margin-bottom:8px; }
+.reaction-btn { margin-right:10px; cursor:pointer; display: inline-block; }
+.comments { margin-top:20px; }
+.comment { border-top:1px solid #eee; padding:12px 0; display:flex; justify-content:space-between; align-items:center; }
+.comment b, .author-name { margin-right:5px; cursor:pointer; color:#111; text-decoration:none; }
+.edit-btn, .delete-btn { padding:4px 8px; font-size:0.9em; margin-right:5px; }
 </style>
 </head>
 <body>
 
+<header>
 <h1>Admin Panel</h1>
-<p id="status">Loading...</p>
+<div id="top-buttons">
+<button id="login-btn">Login / Register</button>
+<button id="account-btn">Account</button>
+<button id="logout-btn">Logout</button>
+</div>
+</header>
+
 <div id="posts-container"></div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
 import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-import { getFirestore, collection, doc, onSnapshot, deleteDoc, updateDoc } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+import { getFirestore, collection, doc, onSnapshot, deleteDoc, updateDoc, increment } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
-/* Firebase Config */
 const firebaseConfig = {
   apiKey: "AIzaSyBeslEXxh_2j9dLiwAgeRL3p11iqgWfMgo",
   authDomain: "pulsenet-d1fe0.firebaseapp.com",
@@ -42,35 +53,27 @@ const appId = "pulsenet-d1fe0";
 const postsCol = collection(db,"artifacts",appId,"public","data","posts");
 
 const postsContainer = document.getElementById("posts-container");
-const statusEl = document.getElementById("status");
+const loginBtn = document.getElementById("login-btn");
+const accountBtn = document.getElementById("account-btn");
+const logoutBtn = document.getElementById("logout-btn");
 
 let currentUser = null;
+const adminUIDs = ["4tUXqDRei1RUoPlNSwPOkI5ULtg1"]; // add more admins here
 
-/* Admin users list - UID of admins/mods */
-const adminUIDs = [
-  "4tUXqDRei1RUoPlNSwPOkI5ULtg1",
-  "ADMIN_UID_2"
-];
+loginBtn.onclick = ()=>window.location.href="login.html";
+accountBtn.onclick = ()=>window.location.href="account.html";
+logoutBtn.onclick = ()=>signOut(auth);
 
-/* Auth check */
-onAuthStateChanged(auth, user => {
-  if(!user) {
-    statusEl.textContent = "Please login first.";
-    return;
-  }
-  currentUser = user;
-  if(!adminUIDs.includes(user.uid)) {
-    statusEl.textContent = "You are not authorized to view this page.";
-    return;
-  }
-  statusEl.textContent = `Welcome, ${user.displayName || "Admin"} | UID: ${user.uid} `;
+onAuthStateChanged(auth,user=>{
+  if(!user) return postsContainer.innerHTML="<p>Please login first.</p>";
+  currentUser=user;
+  if(!adminUIDs.includes(user.uid)) return postsContainer.innerHTML="<p>You are not authorized.</p>";
   loadPosts();
 });
 
-/* Load posts with admin actions */
 function loadPosts(){
   onSnapshot(postsCol, snapshot=>{
-    postsContainer.innerHTML = "";
+    postsContainer.innerHTML="";
     const docs = snapshot.docs.sort((a,b)=>{
       return (b.data().createdAt?.seconds||0) - (a.data().createdAt?.seconds||0);
     });
@@ -80,51 +83,72 @@ function loadPosts(){
       const postId = docSnap.id;
 
       const div = document.createElement("div");
-      div.className = "post";
+      div.className="post";
 
+      // Post HTML
       div.innerHTML = `
-        <div class="meta"><b>${escapeHTML(post.authorName||"Anonymous")}</b> • ${post.createdAt?.seconds ? new Date(post.createdAt.seconds*1000).toLocaleString() : ""}</div>
+        <div class="meta"><b class="author-name" data-uid="${post.authorId}">${escapeHTML(post.authorName||"Anonymous")}</b> • ${post.createdAt?.seconds ? new Date(post.createdAt.seconds*1000).toLocaleString() : ""}</div>
         <h3>${escapeHTML(post.title)}</h3>
         <p>${escapeHTML(post.content)}</p>
         <div>
-          <button class="button button-small edit-btn">Edit</button>
-          <button class="button button-small delete-btn">Delete</button>
+          <button class="edit-btn btn-dark">Edit</button>
+          <button class="delete-btn btn-dark">Delete</button>
+        </div>
+        <div class="reactions">
+          <button class="reaction-btn" data-type="like">❤️ ${post.reactions?.like||0}</button>
+          <button class="reaction-btn" data-type="fire">🔥 ${post.reactions?.fire||0}</button>
+          <button class="reaction-btn" data-type="insight">💡 ${post.reactions?.insight||0}</button>
+        </div>
+        <div class="comments">
+          <h4>Comments & Replies</h4>
+          <div class="comments-list">
+            ${(post.comments||[]).map(c=>`
+              <div class="comment">
+                <div>
+                  <b class="comment-user" data-uid="${c.authorId}">${escapeHTML(c.authorName)}</b>: ${escapeHTML(c.text)}
+                </div>
+              </div>`).join("")}
+          </div>
         </div>
       `;
 
       postsContainer.appendChild(div);
 
-      /* Delete post */
+      // Delete
       div.querySelector(".delete-btn").onclick = async ()=>{
-        if(confirm("Are you sure you want to delete this post?")){
-          await deleteDoc(doc(db,"artifacts",appId,"public","data","posts",postId));
-          alert("Post deleted.");
-        }
+        if(confirm("Delete this post?")) await deleteDoc(doc(db,"artifacts",appId,"public","data","posts",postId));
       };
 
-      /* Edit post */
+      // Edit
       div.querySelector(".edit-btn").onclick = async ()=>{
         const newTitle = prompt("New Title:", post.title);
         const newContent = prompt("New Content:", post.content);
-        if(newTitle !== null && newContent !== null){
-          await updateDoc(doc(db,"artifacts",appId,"public","data","posts",postId),{
-            title: newTitle,
-            content: newContent
-          });
-          alert("Post updated.");
+        if(newTitle!==null && newContent!==null){
+          await updateDoc(doc(db,"artifacts",appId,"public","data","posts",postId),{title:newTitle,content:newContent});
         }
       };
+
+      // Reactions
+      div.querySelectorAll(".reaction-btn").forEach(btn=>{
+        btn.onclick = async ()=>{
+          await updateDoc(doc(db,"artifacts",appId,"public","data","posts",postId),{[`reactions.${btn.dataset.type}`]: increment(1)});
+        };
+      });
+
+      // Author & comment click → account page
+      const authorEl = div.querySelector(".author-name");
+      if(authorEl) authorEl.onclick = ()=> window.location.href=`account.html?uid=${authorEl.dataset.uid}`;
+      div.querySelectorAll(".comment-user").forEach(el=>{
+        el.onclick = ()=> window.location.href=`account.html?uid=${el.dataset.uid}`;
+      });
     });
   });
 }
 
-/* Escape HTML */
 function escapeHTML(str){
-  return str?.replace(/[&<>"']/g,m=>({
-    "&":"&amp;","<":"&lt;",">":"&gt;",
-    '"':"&quot;","'":"&#039;"
-  }[m]));
+  return str?.replace(/[&<>"']/g,m=>({"&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#039;"}[m]));
 }
 </script>
+
 </body>
 </html>
